<resources>
    <string name="app_name">World News</string>
    <string name="home">Home</string>
    <string name="sources">Sources</string>
    <string name="about_me">About me</string>
    <string name="search">Search</string>
    <string name="by">by</string>
    <string name="search_something">Search Something…</string>
    <string name="ehsan_pishyar">ehsan_pishyar</string>
    <string name="newsapi_org">newsapi.org</string>
    <string name="instagram">instagram:</string>
    <string name="email">ehsan.pishyar@gmail.com</string>
    <string name="e_mail">email:</string>
    <string name="ehsanpishyar">Ehsan Pishyar</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connected">Retrieving data…</string>
</resources>
